--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
   <header>
     <h1>Broadway Design</h1>
-    <nav>
-      <p><a href="#">Home</a></p>
-      <p><a href="#">Process</a></p>
-      <p><a href="#">Work</a></p>
-      <p><a href="#">Team</a></p>
-      <p><a href="#">Contact</a></p>
+    <nav class="nav">
+      <p><a class="nav" href="#">Home</a></p>
+      <p><a class="nav" href="#">Process</a></p>
+      <p><a class="nav" href="#">Work</a></p>
+      <p><a class="nav" href="#">Team</a></p>
+      <p><a class="nav" href="#">Contact</a></p>
     </nav>
   </header>
 
@@ -34,7 +34,7 @@
   </section>
 
   <section>
-    <h2 id="Design" Designed in New York</h2>
+    <h3 id="design"> Designed in New York</h2>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
       <h3>Team</h3>
@@ -46,11 +46,9 @@
   </section>
 
   <footer>
-    <p><em>Broadway 2017</em><a href="#">Home</a> <a href="#"About></a> <a href="#">Work </a> <a href="#">Team</a> <a href="#">Contact</a>
+    <p class="foot">Broadway 2017 <a class="nav" href="#">Home</a> <a class="nav" href="#"About></a> <a class="nav" href="#">Work </a> <a class="nav" href="#">Team</a> <a class="nav" href="#">Contact</a>
       </p>
   </footer>
-
-
 
 
 
