--- a/index.html
+++ b/index.html
@@ -21,32 +21,35 @@
   <section>
     <h2>Our Process</h2>
     <img src="./resources/images/identify.svg" alt="squiggly arrow">
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
 
-<img src="./resources/images/understand.svg" alt="circular arrows">
+    <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+    <img src="./resources/images/understand.svg" alt="circular arrows">
+
     <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+      <p>We study our projects inside and out.</p>
 
     <img src="./resources/images/execute.svg" alt="arrow">
+
     <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+      <p>We put everything we have into our work.</p>
   </section>
 
   <section>
     <h3 id="design"> Designed in New York</h2>
-      <h3>Portfolio</h3>
+    <h3>Portfolio</h3>
       <p>Coming Soon</p>
-      <h3>Team</h3>
+    <h3>Team</h3>
       <p>We're Hiring!</p>
-      <h3>Contact</h3>
-      <p>Phone: (555)-555-555
-      E-mail: test@example.com
-    Twitter: @test</p>
+    <h3>Contact</h3>
+      <p>Phone: (555)-555-555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
   </section>
 
   <footer>
-    <p class="foot">Broadway 2017 <a class="nav" href="#">Home</a> <a class="nav" href="#"About></a> <a class="nav" href="#">Work </a> <a class="nav" href="#">Team</a> <a class="nav" href="#">Contact</a>
+    <p class="foot">© Broadway 2017 <a class="nav" href="#">Home</a> <a class="nav" href="#"About></a> <a class="nav" href="#">Work </a> <a class="nav" href="#">Team</a> <a class="nav" href="#">Contact</a>
       </p>
   </footer>
 
